@@ -42,8 +42,8 @@
     <tukaani.version>1.5</tukaani.version>
     <mime4j.version>0.7.2</mime4j.version>
     <vorbis.version>0.8</vorbis.version>
-    <pdfbox.version>2.0.4</pdfbox.version>
-    <jempbox.version>1.8.12</jempbox.version>
+    <pdfbox.version>2.0.5</pdfbox.version>
+    <jempbox.version>1.8.13</jempbox.version>
     <netcdf-java.version>4.5.5</netcdf-java.version>
     <cxf.version>3.0.12</cxf.version>
     <sis.version>0.6</sis.version>
